test/2-error/ann-Int-Str.err
type error: test/2-error/ann-Int-Str.ploy:2:3-3: actual type is not expected opaque type;
type annotation;
resolved type: Int
    0:Str;
    ~
note: test/2-error/ann-Int-Str.ploy:2:5-7:
type annotation;
expected type: Str
    0:Str;
      ~~~
